RESOLVED FIXED29782
Share code in HTMLInputElement and HTMLTextAreaElement
https://bugs.webkit.org/show_bug.cgi?id=29782
Summary Share code in HTMLInputElement and HTMLTextAreaElement
Kent Tamura
Reported 2009-09-27 09:31:13 PDT
It's possible to share more code in HTMLinputElement.cpp and HTMLTextAreaElement.cpp; especially selection-related code.
Attachments
Proposed patch (18.16 KB, patch)
2009-09-27 09:42 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2009-09-27 09:42:02 PDT
Created attachment 40193 [details] Proposed patch This patch will remove 160 lines and add 100 lines exclude ChangeLog change.
Eric Seidel (no email)
Comment 2 2009-10-02 12:34:37 PDT
Comment on attachment 40193 [details] Proposed patch Looks fine to me. I could have sworn I already reviewed this patch on a different bug.
WebKit Commit Bot
Comment 3 2009-10-02 13:35:03 PDT
Comment on attachment 40193 [details] Proposed patch Rejecting patch 40193 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11370 test cases. dom/html/level2/html/HTMLFrameElement01.html -> crashed Exiting early after 1 failures. 1267 tests run. 210.43s total testing time 1266 test cases (99%) succeeded 1 test case (<1%) crashed 1 test case (<1%) had stderr output
Eric Seidel (no email)
Comment 4 2009-10-02 15:17:13 PDT
Comment on attachment 40193 [details] Proposed patch I've filed bug 30030 about this failure. I don't believe this was related to your changes.
WebKit Commit Bot
Comment 5 2009-10-02 15:49:36 PDT
Comment on attachment 40193 [details] Proposed patch Clearing flags on attachment: 40193 Committed r49051: <http://trac.webkit.org/changeset/49051>
WebKit Commit Bot
Comment 6 2009-10-02 15:49:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.